[package]
name = "versionman"
authors = ["Joshua Price <jwpjr567@gmail.com>"]
description = "CLI for incrementing project versions"
keywords = ["cli", "version", "semver", "ci"]
license = "MIT"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.0.14", features = ["cargo", "derive"] }
semver = "1.0.5"
toml_edit = "0.13.4"
